<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:src="@drawable/big_logo"
        app:layout_constraintEnd_toStartOf="@+id/app_name"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/app_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/noto_sansjp_bold"
        android:text="@string/app_name"
        android:textSize="@dimen/high_font_size"
        app:layout_constraintBottom_toBottomOf="@+id/logo"
        app:layout_constraintStart_toEndOf="@+id/logo"
        app:layout_constraintTop_toTopOf="@+id/logo" />


    <View
        android:id="@+id/under_line"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginTop="8dp"
        android:background="@color/top_line"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logo" />

    <TextView
        android:id="@+id/app_version"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/noto_sansjp_medium"
        android:text="X.X.X.X"
        android:textSize="@dimen/normal_font_size"
        app:layout_constraintBottom_toBottomOf="@+id/app_version_label"
        app:layout_constraintStart_toEndOf="@+id/app_version_label"
        app:layout_constraintTop_toTopOf="@+id/app_version_label"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="HardcodedText" />

    <TextView
        android:id="@+id/app_version_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/noto_sansjp_medium"
        android:text="@string/version_label"
        android:textSize="@dimen/normal_font_size"
        app:layout_constraintEnd_toStartOf="@+id/app_version"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/under_line" />

    <TextView
        android:id="@+id/app_author"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/noto_sansjp_medium"
        android:text="@string/author"
        android:textSize="@dimen/normal_font_size"
        app:layout_constraintBottom_toBottomOf="@+id/app_author_label"
        app:layout_constraintStart_toEndOf="@+id/app_version_label"
        app:layout_constraintTop_toTopOf="@+id/app_author_label"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="HardcodedText" />

    <TextView
        android:id="@+id/app_author_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/noto_sansjp_medium"
        android:text="@string/author_label"
        android:textSize="@dimen/normal_font_size"
        app:layout_constraintEnd_toStartOf="@+id/app_version"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/app_version_label" />

</androidx.constraintlayout.widget.ConstraintLayout>